--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,17 @@
             <version>3.3.1</version>
         </dependency>
         <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+    <!--        <dependency>-->
+    <!--            <groupId>org.springframework.boot</groupId>-->
+    <!--            <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+    <!--        </dependency>-->
     </dependencies>
 </project>
