--- a/spring-security-service/src/main/resources/application.yml
+++ b/spring-security-service/src/main/resources/application.yml
@@ -1,2 +1,34 @@
 server:
   port: 7011
+
+#spring:
+#  security:
+#配置文件登陆用户名密码
+#    user:
+#      name: tang
+#      password: 321
+
+#日志
+logging:
+  level:
+    org:
+      springframework:
+        security: debug
+#spring:
+#  thymeleaf:
+#    cache: false
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/ad_spring_security?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    username: root
+    password: 12345678
+    hikari:
+      # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库 wait_timeout 时长少30秒，（show variables like '%timeout%';）
+      max-lifetime: 180000
+      # 连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+      maximum-pool-size: 15
+      # 一个连接idle状态的最大时长（毫秒），超时则被释放（retired），缺省:10分钟
+      idle-timeout: 600000
+      # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 缺省:30秒
+      connection-timeout: 30000
